--- a/notes/ch04 复合类型.md
+++ b/notes/ch04 复合类型.md
@@ -1410,3 +1410,630 @@ char fourth_data {"Le Chapon Dodu"};
       ```
 
   * 相邻的 int 地址通常相差2个字节或4个字节，而将p3加1后，它将指向下一个元素的地址，这表明指针算术有一些特别的地方。详情见P106
+
+
+
+### 4.8 指针、数组和指针算术
+
+#### 4.8.1 示例
+
+* 示例：
+
+  * ```c++
+    // addpntrs.cpp -- pointer addition
+    #include <iostream>
+    int main() {
+    	using namespace std;
+    	double wages[3] = {10000.0, 20000.0, 30000.0 };
+    	short stacks[3] = {3, 2, 1 };
+    
+    	double * pw = wages;
+    	short * ps = &stacks[0];
+    
+    	cout << "pw = " << pw << ", *pw = " << *pw << endl;
+    	pw = pw + 1;
+    	cout << "add 1 to the pw pointer:\n";
+    	cout << "pw = " << pw << ", *pw = " << *pw << "\n\n";
+    
+    	cout << "ps = " << ps << ", *ps = " << *ps << endl;
+    	ps = ps + 1;
+    	cout << "add 1 to the ps pointer:\n";
+    	cout << "ps = " << ps << ", *ps = " << *ps << "\n\n";
+    
+    	cout << "access two elements with array notation\n";
+    	cout << "stacks[0] = " << stacks[0]
+    		 << ", stacks[1] = " << stacks[1] << endl;
+    	
+    	cout << "access two elements with pointer notation\n";
+    	cout << "*stacks = " << *stacks
+    		<< ", *(stacks + 1) = " << *(stacks + 1) << endl;
+    
+    	cout << sizeof(wages) << " = size of wages array\n";
+    	cout << sizeof(pw) << " = size of pw pointer\n";
+    
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ``` c++
+    pw = 004FFD08, *pw = 10000
+    add 1 to the pw pointer:
+    pw = 004FFD10, *pw = 20000
+    
+    ps = 004FFCF8, *ps = 3
+    add 1 to the ps pointer:
+    ps = 004FFCFA, *ps = 2
+    
+    access two elements with array notation
+    stacks[0] = 3, stacks[1] = 2
+    access two elements with pointer notation
+    *stacks = 3, *(stacks + 1) = 2
+    24 = size of wages array
+    4 = size of pw pointer
+    ```
+
+  * C++将数组名解释为数组第一个元素的地址：
+
+    * wages = &wages[0] = address of first element of array
+
+  * 将指针变量加1后，其增加的值等于指向的类型占用的字节数。
+
+  * 使用数组表示法，可执行如下转换：
+
+    * arrayname [i] becomes *(arrayname + i)
+
+  * 如果使用的是指针，而不是数组名，则：
+
+    * pointername [i] becomes *(pointername + i)
+
+  * 区别：
+
+    * 1、解除引用运算符（*）时，它们都表示指针，但是可以修改指针的值，而不能修改数组名的值，因为数组名是常量。
+    * 2、对数组应用sizeof得到的是数组的长度（所有数据的位宽），而对指针应用sizeof得到的是指针的长度（地址的位宽）。
+
+
+
+#### 4.8.2 指针小结
+
+* 1、声明指针
+
+  * 通用格式：
+
+    * ``` c++
+      typeName * pointerName;
+      ```
+
+* 2、给指针赋值
+
+  * 应将内存地址赋值给指针：
+
+    * 可以对变量名应用&运算符，来获得被命名的内存地址：
+
+      * ``` c++
+        double * pn;
+        double bubble = 3.2;
+        pn = &bubble;
+        ```
+
+    * new运算符返回未命名的内存地址：
+
+      * ```c++
+        double * pa;
+        char * pc;
+        pc = new char;
+        pa = new double[30];
+        ```
+
+* 3、对指针解除引用
+
+  * 对指针解除引用意味着获得指针指向的值。
+
+  * 对指针应用解除引用或间接值运算符（*）来解除引用：
+
+    * ```c++
+      cout << *pn;
+      *pc = 's';
+      ```
+
+* 4、区分指针和指针所指向的值
+
+  * 如果pt是指向int的指针，则*pt完全等同于一个int类型的变量。（pt才是指针）
+
+* 5、数组名
+
+  * 多数情况下：C++将数组名视为数组的第一个元素的地址。
+  * 例外：sizeof数组名时，返回整个数组的位宽长度。
+
+* 6、指针算术
+
+  * C++允许将指针和整数相加，加1的结果等于原来的地址值加上指向的对象占用的总字节数。
+  * 还可以将一个指针减去另一个指针，获得两个指针的差（整数，仅当两个指针指向同一个数组时才有意义）
+
+* 7、数组的动态联编和静态联编
+
+  * 静态联编：
+
+    * 使用数组声明来创建数组时，采用的是静态联编，即数组的长度在编译时设置：
+
+      * ```c++
+        int tacos[10];
+        ```
+
+  * 动态联编：
+
+    * 使用new[]运算符创建数组时，采用的是动态联编，即将在运行时为数组分配空间，其长度将在运行时设置。使用完成这种数组后，应使用delete[]释放其占用的内存。
+
+      * ``` c++
+        int size;
+        cin >> size;
+        int* pz = new int [size];
+        ...
+        delete [] pz;
+        ```
+
+* 8、数组表示法和指针表示法（`难懂`）
+
+  * 使用方括号数组表示法等同于对指针解除引用(你可以理解为解除引用就是表示指针指向地址的值)
+
+    * ```c++
+      tacos[0] means *tacos means the value at address tacos;
+      tacos[3] means *(tacos + 3) means the value at address tacos + 3
+      ```
+
+  * 对于指针和数组名，既可以使用指针表示法，也可以使用数组表示法：
+
+    * ```c++
+      int* pt = new int [10];
+      *pt = 5;			//set element number 0 to 5;
+      pt[0] = 6;			//reset element number 0 to 6
+      pt[9] = 44;  		//set tenth element(element number 9) to 44
+      int coats[10];
+      *(coats + 4) = 12  	//set coats[4] to 12
+      ```
+
+
+
+#### 4.8.3 指针和字符串
+
+* 在cout和多数C++表达式中，char数组名、char指针以及用引号括起的字符串常量都被解释为字符串第一个字符的地址；
+
+* 例程：
+
+  * ```c++
+    // ptrstr.cpp -- using pointers to strings
+    #define _CRT_SECURE_NO_WARNINGS
+    #include <iostream>
+    #include <cstring>
+    
+    int main() {
+    	using namespace std;
+    	char animal[20] = "bear";
+    	const char* bird = "wren";	//bird holds address of string
+    	char* ps;
+    
+    	cout << animal << " and ";
+    	cout << bird << "\n";
+    
+    	cout << "Enter a kind of animal: ";
+    	cin >> animal;
+    
+    	ps = animal;
+    	cout << ps << "!\n";
+    	cout << "Before using strcpy():\n";
+    	cout << animal << " at " << (int*) animal << endl;
+    	cout << ps << " at " << (int *) ps << endl;
+    
+    	ps = new char[strlen(animal) + 1];
+    	strcpy(ps, animal);
+    	cout << "After using strcpy():\n";
+    	cout << animal << " at " << (int*)animal << endl;
+    	cout << ps << " at " << (int*)ps << endl;
+    	delete [] ps;
+    
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    bear and wren
+    Enter a kind of animal: fox
+    fox!
+    Before using strcpy():
+    fox at 0079FA98
+    fox at 0079FA98
+    After using strcpy():
+    fox at 0079FA98
+    fox at 00E5C7A8
+    ```
+
+  * "wren"实际表示的时字符串的地址，因此const char* bird = "wren";将“wren”的地址赋值给了bird指针。
+
+  * 字符串字面值是常量，所以声明中使用const，可以用bird来访问字符串，但是不能修改它。
+
+  * 对于cout来说，使用数组名animal和指针bird是一样的，它们都是字符串的地址，cout将显示储存在这两个地址上的两个字符串。
+
+  * 使用const char* bird来输入并不合适：
+
+    * 有些编译器将字符串字面值视为只读常量，如果试图修改它们，将导致运行阶段错误。在C++中，字符串字面值都将被视为常量，但并不是所有的编译器都对以前的行为做了这样的修改。
+    * 有些编译器只使用字符串字面值的一个副本来表示程序中所有的该字面值。
+
+  * 总结：
+
+    * 不要使用字符串常量或未被初始化的指针来接收输入。
+
+  * 警告：
+
+    * 在将字符串读入程序时，应使用已分配的内存地址。该地址可以是数组名，也可以是使用new初始化过的指针。
+
+  * 你不懂的部分：
+
+    * ``` c++
+      	ps = animal;
+      	cout << animal << " at " << (int*) animal << endl;
+      	cout << ps << " at " << (int *) ps << endl;
+      
+      //////////////out//////////////
+      fox at 0079FA98
+      fox at 0079FA98
+      ```
+
+    * 如果给cout提供一个地址，他将打印储存在地址上的内容；
+
+    * 如果给cout提供一个指针，它将打印地址；
+
+      * 如果指针的类型为char *，则cout将显示指向的字符串；所以要显示字符串的地址，需要强制转换指针为int *
+
+      * 即：
+
+        * ``` c++
+          cout << ps; //display fox
+          cout << (int*) ps; //display address of 'fox'
+          ```
+
+    * ```c++
+      ps = animal;
+      ```
+
+      * 将animal赋值给ps，并不会赋值字符串，而只赋值地址，表示两个指针同时指向相同内存单元的字符串。
+
+    * 要获得字符串副本：
+
+      * 1、声明另一个数字
+
+      * 2、使用new：
+
+        * ``` c++
+          ps = new char[strlen(animal) + 1];
+          ```
+
+        * fox不能填满整个animal，因此为了节省内存空间，使用strlen()确定字符串的长度；
+
+        * strlen(animal) + 1 表示获得包含fox和空字符的长度，然后用new来分配空间。
+
+    * 复制字符串：
+
+      * ```c++
+        strcpy(ps, animal);
+        ```
+
+      * strcpy()接受2个参数：
+
+        * 第一个是目标地址；
+        * 第二个是要复制的字符串的地址。
+
+    * 将字符串赋给数组：
+
+      * 初始化数组时，请使用=运算符；否则应使用 strcpy()或strncpy()。
+      * 其他时候应使用strcpy()或strncpy()，而不是赋值运算符来将字符串赋给数组。
+
+
+
+#### 4.8.4 使用new创建动态结构
+
+* 📌在运行时创建数组优于在编译时创建数组，对于结构也是如此。
+
+* 将new用于结构由2步组成：
+
+  * 1、创建结构
+
+    * ```c++
+      inflatable * ps = new inflatable;
+      ```
+
+      * 结构中的指针应用：
+
+        * 方法1：
+
+          * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/caa27939-0055-4cfd-ac20-15d3a4e7db44)
+
+          * 如果结构标识符是结构名，则使用句点运算符；
+          * 如果标识符是指向结构的指针，则使用箭头运算符。
+
+        * 方法2：
+
+          * 如果ps是指向结构的指针，则*ps就是被指向的值——结构本身。
+          * 由于* ps是一个结构，因此(* ps) .price是该结构的price成员。C++的运算符优先规则要求使用括号。
+
+        * 例程：
+
+          * ```c++
+            // newstrct.cpp -- using new with a stucture
+            #include <iostream>
+            struct inflatable {
+            	char name[20];
+            	float volume;
+            	double price;
+            };
+            
+            int main() {
+            	using namespace std;
+            	inflatable* ps = new inflatable;
+            	cout << "Enter name of inflatable item: ";
+            	cin.get(ps->name, 20);
+            	cout << "Enter volume in cubic feet: ";
+            	cin >> (*ps).volume;
+            	cout << "Enter price: $";
+            	cin >> ps->price;
+            	cout << "Name: " << (*ps).name << endl;
+            	cout << "Volume: " << ps->volume << " cubic feet\n";
+            	cout << "Price: $" << ps->price << endl;
+            	delete ps;
+            
+            	return 0;
+            }
+            ```
+
+        * 结果：
+
+          * ``` c++
+            Enter name of inflatable item: Fabulous Frodo
+            Enter volume in cubic feet: 1.4
+            Enter price: $27.99
+            Name: Fabulous Frodo
+            Volume: 1.4 cubic feet
+            Price: $27.99
+            ```
+
+  * 2、访问其成员
+
+* 一个使用new和delete的示例：
+
+  * ```c++
+    // delete.cpp -- using the delete operator
+    #define _CRT_SECURE_NO_WARNINGS
+    #include <iostream>
+    #include <cstring>
+    
+    using namespace std;
+    char* getname(void);
+    
+    int main() {
+    	char* name;
+    
+    	name = getname();
+    	cout << name << " at " << (int*)name << "\n";
+    	delete [] name;
+    
+    	name = getname();
+    	cout << name << " at " << (int*)name << "\n";
+    	delete[] name;
+    	return 0;
+    }
+    
+    char* getname() {
+    	char temp[80];
+    	cout << "Enter last name: ";
+    	cin >> temp;
+    	char* pn = new char[strlen(temp) + 1];
+    	strcpy(pn, temp);
+    
+    	return pn;
+    }
+    ```
+
+* 结果：
+
+  * ``` c++
+    Enter last name: Fredeldumpkin
+    Fredeldumpkin at 013609F0
+    Enter last name: Pook
+    Pook at 013618F8
+    ```
+
+  * 在这个例子中，getname()分配内存，而main()释放内存。将 new 和 delete 放在不同的函数中通常并不是个好办法，因为这样很容易忘记使用delete。不过这个例子确实把 new 和 delete 分开放置了，只是为了说明这样做也是可以的。
+
+
+
+#### 4.8.5 自动存储、静态存储和动态存储
+
+* 1、自动存储
+  * 在函数内部定义的常规变量使用自动存储空间，被称为自动变量(automatic variable)，这意味着它们在所属的函数被调用时自动产生,在该函数结束时消亡。
+  * 自动变量是一个局部变量，其作用域为包含它的代码块。
+  * 自动变量通常存储在栈中。这意味着执行代码块时，其中的变量将依次加入到栈中，而在离开代码块时，将按相反的顺序释放这些变量，这被称为后进先出（LIFO)。因此，在程序执行过程中，栈将不断地增大和缩小。
+* 2、静态存储
+  * 静态存储是整个程序执行期间都存在的存储方式。使变量成为静态的方式有两种；
+    * 一种是在函数外面定义它；
+    * 另一种是在声明变量时使用关键字static。
+* 3、动态存储
+  * new和delete运算符提供了一种比自动变量和静态变量更灵活的方法：
+    * 它们管理了一个内存池，这在C++中被称为自由存储空间(free store)或堆(heap)。
+    * 该内存池同用于静态变量和自动变量的内存是分开的。new和delete让您能够在一个函数中分配内存，而在另一个函数中释放它。因此，数据的生命周期不完全受程序或函数的生存时间控制。
+  * 要避免内存泄漏需要同时使用new和delete运算符，在自由存储空间上动态分配内存，随后便释放它。
+
+
+
+### 4.9 类型组合
+
+* `很难懂`，<u>**想办法找点视频看一下**</u>。P118-119
+
+* ``` c++
+  struct antarctica_years_end{
+    int year;
+  };
+  
+  antarctica_years_end s01, s02, s03;
+  s01.year = 1998;
+  const antarctica_years_end* arp[3] = {&s01, &s02, &s03}//arp是一个指针数组，arp[1]就是一个指针
+  std::cout << arp[1]->year << std::cout;
+  const antarctica_years_end** ppa = arp;//arp是一个指针数组，作为数组名，是第一个元素的地址。而第一个元素是指针，所以ppa=arp是一个指针
+  auto ppb = arp;
+  std::cout << (*ppa)->year << std::endl;//ppa是一个指向结构指针的指针，所以*ppa是一个结构指针，即(*ppa)等价于arp[0]中的值&s01
+  std::cout << (*(ppb+1))->year << std::endl;
+  ```
+
+* ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/e6122953-e96f-4a1d-b6ed-f03ccb77241e)
+
+
+* 例程：
+
+  * ```c++
+    // mixtypes.cpp -- some type combinations
+    #include <iostream>
+    
+    struct antarctica_years_end {
+    	int year;
+    };
+    
+    int main() {
+    	antarctica_years_end s01, s02, s03;
+    	s01.year = 1998;
+    	antarctica_years_end* pa = &s02;
+    	pa->year = 1999;
+    	//trio是一个数组，trio[0]是一个结构，而trio[0].year是该结构的一个成员
+    	antarctica_years_end trio[3];
+    	trio[0].year = 2003;
+    	//数组名是一个指针，因此可以使用间接陈冠符号：
+    	std::cout << trio->year << std::endl;
+    	//定义一个指针数组，arp[1]等价于&s02，即指向s02的指针
+    	const antarctica_years_end* arp[3] = {&s01, &s02, &s03};
+    	std::cout << arp[1]->year << std::endl;
+    	//arp是指针数组的数组名，代表第一个元素的地址
+    	const antarctica_years_end** ppa = arp;
+    	auto ppd = arp;
+    	//ppa=arp说明ppa指向了第一元素，第一个元素是s01的结构指针&s01
+    	//因此ppa是指向结构指针的指针，那么*ppa等价于第一个元素&s01
+    	std::cout << (*ppa)->year << std::endl;
+    	std::cout << (*(ppd+1))->year << std::endl;
+    
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    2003//trio[0].year
+    1999//s02
+    1998//s01
+    1999//s02
+    ```
+
+
+
+### 4.10 数组的替代品
+
+#### 4.10.1 模板类vector
+
+* 模板类vector类似于string类，也是一种动态数组；
+  * 可以在运行阶段设置vector对象的长度，可在末尾附加新数据，还可在中间插入新数据。
+  * 它是使用new创建动态数组的替代品。
+* 如何使用vector对象：
+  * 1、必须包含头文件：
+    * #include <vector>
+  * 2、vector包含在名称空间std中，因此可以使用using编译指令、using声明或std::vector：
+    * using namespace std;
+  * 3、模板使用不同的语法来指出它存储的数据类型：
+    * vector<int> vi;
+  * 4、vector类使用不同的语法来指定元素数：
+    * int n;
+    * cin >> n;
+    * vector<double> vd(n);
+* 📌声明创建一个名为vt的vector对象通用格式：
+  * vector<*typeName*> vt(*n_elem*);
+  * n_elem可以是整型常量，也可以是整型变量。
+
+
+
+#### 4.10.2 模板类array（C++11）
+
+* vector类的功能比数组强大，但付出的代价是效率稍低。如果需要长度固定的数组可以使用数组，更好的办法是使用模板类array，其长度也是固定的，使用栈，效率与数组相同，会更加方便安全。
+* 创建方法：
+  * 1、必须包含头文件：
+    * #include <array>
+  * 2、vector包含在名称空间std中，因此可以使用using编译指令、using声明或std::vector：
+    * using namespace std;
+  * 3、模板使用不同的语法来指出它存储的数据类型：
+    * array<int, 5> ai;
+    * array<double, 4> = {1.2, 2.1, 3.43, 4.3}
+* 📌声明创建一个名为arr的array对象通用格式：
+  * array<*typeName， n_elem*> arr;
+  * n_elem可以是整型常量，`不能`是整型变量。
+
+
+
+#### 4.10.3 比较数组、vector对象和array对象
+
+* 示例：
+
+  * ```c++
+    #include <array>
+    
+    int main() {
+    	using namespace std;
+    	double a1[4] = { 1.2, 2.4, 3.6, 4.8};
+    	vector<double> a2(4);
+    	a2[0] = 1.0/3.0;
+    	a2[1] = 1.0/5.0;
+    	a2[2] = 1.0/7.0;
+    	a2[3] = 1.0/9.0;
+    
+    	array<double, 4> a3 = { 3.14, 2.72, 1.62, 1.41 };
+    	array<double, 4> a4;
+    	a4 = a3;
+    
+    	cout << "a1[2]: " << a1[2] << " at " << &a1[2] << endl;
+    	cout << "a2[2]: " << a2[2] << " at " << &a2[2] << endl;
+    	cout << "a3[2]: " << a3[2] << " at " << &a3[2] << endl;
+    	cout << "a4[2]: " << a4[2] << " at " << &a4[2] << endl;
+    
+    	a1[-2] = 20.2;
+    	cout << "a1[-2]: " << a1[-2] << " at " << &a1[-2] << endl;
+    	cout << "a3[2]: " << a3[2] << " at " << &a3[2] << endl;
+    	cout << "a4[2]: " << a4[2] << " at " << &a4[2] << endl;
+    
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    a1[2]: 3.6 at 00AFF738
+    a2[2]: 0.142857 at 0101C878
+    a3[2]: 1.62 at 00AFF6F8
+    a4[2]: 1.62 at 00AFF6D0
+    a1[-2]: 20.2 at 00AFF718
+    a3[2]: 1.62 at 00AFF6F8
+    a4[2]: 1.62 at 00AFF6D0
+    ```
+
+  * ``` c++
+    a1[-2] = 20.2;
+    //等价于：
+    *(a1-2) = 20.2;
+    ```
+
+    * 找到a1指向的地方，向前移两个double元素，并将20.2存储到目的地。也就是说，将信息存储到数组的外面。与C语言一样，C++也不检查这种超界错误。
+
+    * 禁止这种行为取决于你！
+
+    * 其他选择：使用成员函数at():
+
+      * a2.at(1) = 2.3;//assign 2.3 to a2[1]
+
+      
+
