--- a/cpp_practice/book_practice/ch03/ch03.md
+++ b/cpp_practice/book_practice/ch03/ch03.md
@@ -70,8 +70,9 @@ e. 15 % 4 = 3
 ### 9．假设x1和x2是两个double变量，您要将它们作为整数相加，再将结果赋给一个整型变量。请编写一条完成这项任务的C++语句。如果要将它们作为double值相加并转换为 int 呢?
 
 ```c++
-// ch02 -- book practice
+// demo.cpp -- book practice demo
 #include <iostream>
+
 using namespace std;
 
 int main() {
@@ -106,6 +107,7 @@ e. auto fract = 8.25f/2.5		//double
 ### 1．编写一个小程序，要求用户使用一个整数指出自己的身高（单位为英寸)，然后将身高转换为英尺和英寸。该程序使用下划线字符来指示输入位置。另外，使用一个const符号常量来表示转换因子。
 
 ```c++
+// demo.cpp -- book practice demo
 #include <iostream>
 
 int main() {
