--- a/cpp_practice/book_practice/ch03/ch03.md
+++ b/cpp_practice/book_practice/ch03/ch03.md
@@ -218,7 +218,28 @@ Enter the number of seconds: 31600000
 ```
 
 ```c++
+// demo.cpp -- book practice demo
+#include <iostream>
 
+int main() {
+	using namespace std;
+
+	long seconds;
+	cout << "Enter the number of seconds: ";
+	cin >> seconds;
+
+	const int MINUTE_TO_SECOND = 60;
+	const int HOUR_TO_MINUTE = 60;
+	const int DAY_TO_HOUR = 24;
+
+	cout << seconds << " seconds = " 
+		 << seconds / MINUTE_TO_SECOND / HOUR_TO_MINUTE / DAY_TO_HOUR << " days, "
+		 << seconds / MINUTE_TO_SECOND / HOUR_TO_MINUTE % DAY_TO_HOUR << " hours, "
+		 << seconds / MINUTE_TO_SECOND % HOUR_TO_MINUTE <<" minutes, "
+		 << seconds % MINUTE_TO_SECOND << " seconds\n";
+
+	return 0;
+}
 ```
 
 ### 5．编写一个程序，要求用户输入全球当前的人口和美国当前的人口（或其他国家的人口)。将这些信息存储在 long long变量中，并让程序显示美国（或其他国家）的人口占全球人口的百分比。该程序的输出应与下面类似:
@@ -230,18 +251,78 @@ The population of the us is 4.50492% of the world population.
 ```
 
 ```c++
+// demo.cpp -- book practice demo
+#include <iostream>
 
+int main() {
+	using namespace std;
+
+	long long wold_num, us_num;
+	cout << "Enter the word's population: ";
+	cin >> wold_num;
+	
+	cout << "Enter the population of the Us: ";
+	cin >> us_num;
+
+	cout << "The population of the us is " << (double)us_num / (double)wold_num * 100 << "% of the world population.\n";
+	return 0;
+}
 ```
 
 ### 6．编写一个程序，要求用户输入驱车里程（英里）和使用汽油量(加仑)，然后指出汽车耗油量为加仑的里程。如果愿意，也可以让程序要求用户以公里为单位输入距离，并以升为单位输入汽油量，然后指出欧洲风格的结果——即每100公里的耗油量（升)。
 
 ```c++
+// demo.cpp -- book practice demo
+#include <iostream>
 
+int main() {
+	using namespace std;
+
+	double mile_distance, gallon_fule_consumption;
+	cout << "Enter your driving distance in mile: ";
+	cin >> mile_distance;
+	
+	cout << "Enter your fule consumption in gallon: ";
+	cin >> gallon_fule_consumption;
+
+	cout << "Fuel consumption is " 
+		 << mile_distance / gallon_fule_consumption 
+		 << " mile/gallon.\n";
+
+	double kilometers_distance, liter_fule_consumption;
+	cout << "Enter your driving distance in kilometers: ";
+	cin >> kilometers_distance;
+
+	cout << "Enter your fule consumption in liter: ";
+	cin >> liter_fule_consumption;
+
+	cout << "Fuel consumption is "
+		<< kilometers_distance * 100 / liter_fule_consumption
+		<< " L/100km.\n";
+	return 0;
+}
 ```
 
 ### 7．编写一个程序，要求用户按欧洲风格输入汽车的耗油量（每100公里消耗的汽油量(升))，然后将其转换为美国风格的耗油量——每加仑多少英里。注意，除了使用不同的单位计量外，美国方法（距离/燃料）与欧洲方法（燃料/距离）相反。100公里等于62.14英里，1加仑等于3.875升。因此，19mpg大约合12.41/100km，127mpg 大约合8.71/100km。
 
 ```c++
+// demo.cpp -- book practice demo
+#include <iostream>
 
+int main() {
+	using namespace std;
+
+	double fuel_consumption_eur, gallon_fule_consumption;
+	cout << "Enter the fuel consumption in L/100km: ";
+	cin >> fuel_consumption_eur;
+	
+	const float KM_TO_MILLE = 62.14;
+	const float GALLON_TO_LITER = 3.875;
+
+	cout << "The fuel consumption in mille/gallon is: " 
+		 << KM_TO_MILLE / (fuel_consumption_eur / GALLON_TO_LITER)
+		 << " mile/gallon.\n";
+
+	return 0;
+}
 ```
-
