--- a/cpp_practice/book_practice/ch04/ch04.md
+++ b/cpp_practice/book_practice/ch04/ch04.md
@@ -269,13 +269,63 @@ int main() {
 ### 5．结构 CandyBar 包含3个成员。第一个成员存储了糖块的品牌；第二个成员存储糖块的重量(可以有小数)；第三个成员存储了糖块的卡路里含量（整数)。请编写一个程序，声明这个结构，创建一个名为 snack 的  CandyBar 变量，并将其成员分别初始化为 “Mocha Munch” 、2.3 和 350。初始化应在声明snack时进行。最后，程序显示 snack变量的内容。
 
 ```c++
+// demo.cpp -- book practice demo
+#include <iostream>
 
+struct CandyBar {
+	char name[20];
+	double weight;
+	int calorie;
+};
+
+int main() {
+	using namespace std;
+	CandyBar snack = {"Mocha Munch", 2.3, 350};
+
+	cout << "Name: " << snack.name << endl;
+	cout << "Weight: " << snack.weight << endl;
+	cout << "Calorie: " << snack.calorie << endl;
+	
+	return 0;
+}
 ```
 
 ### 6．结构 CandyBar 包含 3 个成员，如编程练习 5所示。请编写一个程序，创建一个包含 3 个元素的 CandyBar 数组，并将它们初始化为所选择的值，然后显示每个结构的内容。
 
 ```c++
+// demo.cpp -- book practice demo
+#include <iostream>
 
+struct CandyBar {
+	char name[20];
+	double weight;
+	int calorie;
+};
+
+int main() {
+	using namespace std;
+	CandyBar candyarr[3] = {
+		{"Mocha Munch", 1.2, 150},
+		{"Orange Candy", 2.3, 250},
+		{"Chocolete Candy", 3.3, 350}
+	}; 
+
+	cout << "Name: " << candyarr[0].name << endl;
+	cout << "Weight: " << candyarr[0].weight << endl;
+	cout << "Calorie: " << candyarr[0].calorie << endl;
+
+	cout << endl;
+	cout << "Name: " << candyarr[1].name << endl;
+	cout << "Weight: " << candyarr[1].weight << endl;
+	cout << "Calorie: " << candyarr[1].calorie << endl;
+
+	cout << endl;
+	cout << "Name: " << candyarr[2].name << endl;
+	cout << "Weight: " << candyarr[2].weight << endl;
+	cout << "Calorie: " << candyarr[2].calorie << endl;
+	
+	return 0;
+}
 ```
 
 ### 7. William Wingate从事比萨饼分析服务。对于每个披萨饼，他都需要记录下列信息:
@@ -284,27 +334,135 @@ int main() {
 * 披萨饼的直径。
 * 披萨饼的重量。
 
-```c++
-
-```
-
 ​	请设计一个能够存储这些信息的结构，并编写一个使用这种结构变量的程序。程序将请求用户输入上述信息，然后显示这些信息。请使用 cin(或它的方法）和 cout。
+
+```c++
+// demo.cpp -- book practice demo
+#include <iostream>
+
+struct Pizza {
+	char company_name[200];
+	double diameter;
+	double weight;
+};
+
+int main() {
+	using namespace std;
+	Pizza user_pizza;
+
+	cout << "Enter the name of pizza company: ";
+	cin.getline(user_pizza.company_name, 200);
+	cout << "Enter the diameter of pizza: ";
+	cin >> user_pizza.diameter;
+	cout << "Enter the weight of pizza: ";
+	cin >> user_pizza.weight;
+
+	cout << endl;
+	cout << "The name of pizza company is: " << user_pizza.company_name << endl;
+	cout << "The diameter of pizza is: " << user_pizza.diameter << endl;
+	cout << "The weight of pizza is: " << user_pizza.weight << endl;
+
+	return 0;
+}
+```
 
 ### 8．完成编程练习7，但使用new来为结构分配内存，而不是声明一个结构变量。另外，让程序在请求输入比萨饼公司名称之前输入比萨饼的直径。
 
 ```c++
+// demo.cpp -- book practice demo
+#include <iostream>
 
+struct Pizza {
+	char company_name[200];
+	double diameter;
+	double weight;
+};
+
+int main() {
+	using namespace std;
+	Pizza* p = new Pizza;
+
+	cout << "Enter the diameter of pizza: ";
+	cin >> (*p).diameter;
+	cin.get();
+
+	cout << "Enter the name of pizza company: ";
+	cin.getline((*p).company_name, 200);
+	
+	cout << "Enter the weight of pizza: ";
+	cin >> p->weight;
+
+	cout << endl;
+	cout << "The name of pizza company is: " << p->company_name << endl;
+	cout << "The diameter of pizza is: " << (*p).diameter << endl;
+	cout << "The weight of pizza is: " << (*p).weight << endl;
+	delete p;
+
+	return 0;
+}
 ```
 
 ### 9．完成编程练习6，但使用new来动态分配数组，而不是声明一个包含3个元素的CandyBar数组。
 
 ```c++
+// demo.cpp -- book practice demo
+#include <iostream>
 
+struct CandyBar {
+	char name[20];
+	double weight;
+	int calorie;
+};
+
+int main() {
+	using namespace std;
+	CandyBar* p = new CandyBar[3];
+	*p = { "Mocha Munch", 1.2, 150 };
+	*(p + 1) = { "Orange Candy", 2.3, 250 };
+	*(p + 2) = { "Chocolete Candy", 3.3, 350 };
+
+	cout << "Name: " << (*p).name << endl;
+	cout << "Weight: " << (*p).weight << endl;
+	cout << "Calorie: " << (*p).calorie << endl;
+
+	cout << endl;
+	cout << "Name: " << (*(p + 1)).name << endl;
+	cout << "Weight: " << (*(p + 1)).weight << endl;
+	cout << "Calorie: " << (*(p + 1)).calorie << endl;
+
+	cout << endl;
+	cout << "Name: " << (*(p + 2)).name << endl;
+	cout << "Weight: " << (*(p + 2)).weight << endl;
+	cout << "Calorie: " << (*(p + 2)).calorie << endl;
+	delete[] p;
+    
+	return 0;
+}
 ```
 
 ### 10．编写一个程序，让用户输入三次40码跑的成绩（如果您愿意，也可让用户输入40米跑的成绩)，并显示次数和平均成绩。请使用一个array对象来存储数据（如果编译器不支持 array类，请使用数组)。:
 
 ```c++
+// demo.cpp -- book practice demo
+#include <iostream>
+#include <array>
 
+int main() {
+	using namespace std;
+	array<double, 3> score;
+
+	for (int i = 0; i < 3; ++i) {
+		cout << "Enter your grade " << i + 1 << ": ";
+		cin >> score[i];
+	}
+
+	cout << "Your grades are:" << score[0]
+		 << " " << score[1]
+		 << " " << score[2] << endl;
+	cout << "Your average score is: "
+		 << (score[0] + score[1] + score[2]) / 3 << endl;
+
+	return 0;
+}
 ```
 
