--- a/notes/ch05 循环和关系表达式.md
+++ b/notes/ch05 循环和关系表达式.md
@@ -281,3 +281,840 @@
 
 
 #### 5.1.5 递增运算符（++）和递减运算符（--）
+
+* 代码：
+
+  * ```c++
+    // ch05_06_plus_one.cpp -- the increment operator
+    #include <iostream>
+    int main() {
+    	using namespace std;
+    	int a = 20;
+    	int b = 20;
+    	cout << "a   = " << a << ":   b = " << b << endl;
+    	cout << "a++ = " << a++ << ": ++b = " << ++b << endl;
+    	cout << "a   = " << a << ":   b = " << b << endl;
+    
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    a   = 20:   b = 20
+    a++ = 20: ++b = 21
+    a   = 21:   b = 21
+    ```
+
+  * a++意味着使用a的当前值计算表达式，然后将a的值加1；
+
+  * ++b意味着先将b的值加1，然后使用新的值来计算表达式。
+
+
+
+#### 5.1.6 副作用和顺序点
+
+* P34自行查阅
+
+
+
+#### 5.1.7 前缀格式和后缀格式
+
+* 下面两种情况下，使用前缀和后缀格式没有任何区别，知识执行速度有细微差别：
+
+  * ```c++
+    for (n = lim; n > 0; --n)
+        ...
+    ```
+
+  * ```c++
+    for (n = lim; n > 0; n--)
+        ...
+    ```
+
+  * `前缀版本效率更高`；
+
+
+
+#### 5.1.8 递增/递减运算符和指针
+
+* 递增运算符用于指针时，将把指针的值增加其指向的数据类型占有的字节数；
+* 指针递增和递减遵循指针算术规则。因此，如果 pt 指向某个数组的第一个元素，++pt 将修改 pt，使之指向第二个元素：
+  * *++pt： *(++pt)
+  * ++*pt：++( *pt)
+  * *pt++： *(pt++)
+
+
+
+#### 5.1.9 组合赋值运算符
+
+* i += by; 等价于 i = i + by;
+* ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/30c573be-d660-4792-8fe6-a5fe2149565a)
+
+
+
+
+#### 5.1.10 符合语句（语句块）
+
+* 包含任意多条语句，用两个花括号来构造一条复合语句（代码块）。
+
+* 示例：
+
+  * ```c++
+    // ch05_08_block.cpp -- use a block statement
+    #include <iostream>
+    int main() {
+    	using namespace std;
+    	cout << "The Amazing Accounto will sum and average ";
+    	cout << "five numbers for you .\n";
+    	cout << "Please enter five values : \n";
+    	double number;
+    	double sum = 0.0;
+    	for (int i = 1; i <= 5; i++) {
+    		cout << "Value " << i << ": ";
+    		cin >> number;
+    		sum += number;
+    	}
+    	cout << "Five exquisite choices indeed! ";
+    	cout << "They sum to " << sum << endl;
+    	cout << "and average to " << sum / 5 << ".\n";
+    	cout << "The Amazing Accounto bids you adieu!\n";
+    
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    The Amazing Accounto will sum and average five numbers for you .
+    Please enter five values :
+    Value 1: 1942
+    Value 2: 1948
+    Value 3: 1957
+    Value 4: 1974
+    Value 5: 1980
+    Five exquisite choices indeed! They sum to 9801
+    and average to 1960.2.
+    The Amazing Accounto bids you adieu!
+    ```
+
+
+
+#### 5.1.11 其他语法技巧——逗号运算符
+
+* 针对循环每轮都将一个变量加1，而将另一个变量减1。在for循环控制部分的更新部分中完成这两项工作将非常方便，但循环句法只允许这里包含一个表达式。在这种情况下，可以使用逗号运算符将两个表达式合并为一个:
+
+  * ++j, --i;
+
+* 示例：
+
+  * ```c++
+    // ch05_09_forstr2.cpp -- reversing an arry
+    #include <iostream>
+    #include <string>
+    
+    int main() {
+    	using namespace std;
+    	cout << "Enter a word: ";
+    	string word;
+    	cin >> word;
+    
+    	char temp;
+    	int i, j;
+    	for (j = 0, i = word.size() - 1; j < i; --i, ++j) {
+    		temp = word[i];
+    		word[i] = word[j];
+    		word[j] = temp;
+    	}
+    
+    	cout << word << "\nDone\n";
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    Enter a word: stressed
+    desserts
+    Done
+    ```
+
+  * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/ad1c6248-fd93-4bd4-ae56-cbaa56347a27)
+
+
+  * 另外，如果在for循环内部声明temp:
+
+    * int temp = word[i];
+    * temp在每轮循环中都将被分配和释放，这比在循环前申明的速度慢，而且它将在循环结束后被丢弃。
+
+* 逗号运算符另外两个特性：
+
+  * 1、首先它确保计算第一个表达式，然后计算第二个表达式：
+    * i = 20, j = 2 * i;	// i set to 20, then j set to 40;
+  * 2、在所有运算符中，都好运算符的优先级是最低的：
+    * cata = 17, 240;	//(cata = 17), 240;
+
+
+
+#### 5.1.12 关系表达式
+
+![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/960a867e-8b2a-4b61-b47a-d7e9f37fe8dc)
+
+
+* 关系运算符的优先级比算术运算符低。即：
+  * x + 3 > y - 2 等效于 (x + 3) > (y - 2)
+
+
+
+#### 5.1.13 赋值、比较和可能犯的错误
+
+* 不要混淆于`等于运算符（==）`和`赋值运算符（=）`
+
+  * 例程：
+
+    * ```c++
+      // ch05_10_equal.cpp -- equality vs assignment
+      #include <iostream>
+      int main() {
+      	using namespace std;
+      	int quizscores[10] =
+      		{ 20, 20, 20, 20, 20, 19, 20, 18, 20, 20 };
+      	cout << "Doing it right:\n";
+      	int i;
+      	for (i = 0; quizscores[i] == 20; i++)
+      		cout << "quiz " << i << " is a 20\n";
+      
+      	cout << "Doing it dangerously wrong:\n";
+      	for (i = 0; quizscores[i] = 20; i++)
+      		cout << "quiz " << i << " is a 20\n";
+      
+      	return 0;
+      }
+      ```
+
+  * 结果：
+
+    * ```c++
+      Doing it right:
+      quiz 0 is a 20
+      quiz 1 is a 20
+      quiz 2 is a 20
+      quiz 3 is a 20
+      quiz 4 is a 20
+      Doing it dangerously wrong:
+      quiz 0 is a 20
+      quiz 1 is a 20
+      quiz 2 is a 20
+      quiz 3 is a 20
+      quiz 4 is a 20
+      quiz 5 is a 20
+      quiz 6 is a 20
+      quiz 7 is a 20
+      quiz 8 is a 20
+      quiz 9 is a 20
+      quiz 10 is a 20
+      quiz 11 is a 20
+      quiz 12 is a 20
+      quiz 13 is a 20
+      ```
+
+
+
+#### 5.1.14 C-风格字符串的比较
+
+* 确定字符数组中的字符串时会出现问题的表达式：
+
+  * ```
+    word == "mate"
+    ```
+
+  * 数组名是数组的地址，用括号括起的字符串常量也是其地址；
+
+  * 因此上式不是判断两个字符串是否相同，而是查看它们是否存储在相同的地址上。
+
+* 应使用strcmp()函数来比较：
+
+  * 该函数接受两个字符串地址作为参数。
+  * 这意味着参数可以是指针、字符串常量或字符数组名。
+  * 如果字符串不相等，则它的值为非零( true);如果字符串相等，则它的值为零(false）。
+
+* 示例：
+
+  * ```c++
+    // ch05_11_compstr1.cpp -- comparing strings using arrays
+    #include <iostream>
+    #include <cstring>
+    int main() {
+    	using namespace std;
+    	char word[5] = "?ate";
+    	for (char ch = 'a'; strcmp(word, "mate"); ch++) {
+    		cout << word << endl;
+    		word[0] = ch;
+    	}
+    	cout << "After loop ends, word is " << word << endl;
+    
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    ?ate
+    aate
+    bate
+    cate
+    date
+    eate
+    fate
+    gate
+    hate
+    iate
+    jate
+    kate
+    late
+    After loop ends, word is mate
+    ```
+
+* 可以使用strcmp()来测试C-风格字符串是否相等（排列顺序)。如果str1和str2相等，则下面的表达式为true：
+
+  * ```c++
+    strcmp(str1, str2) == 0;
+    ```
+
+
+
+#### 5.1.15 比较string类字符串
+
+* 使用string类字符串比较会比上一节使用C——风格字符串简单些：
+
+  * 例程：
+
+    * ```c++
+      // ch05_12_compstr2.cpp -- comparing strings using arrays
+      #include <iostream>
+      #include <cstring>
+      int main() {
+      	using namespace std;
+      	string word = "?ate";
+      	for (char ch = 'a'; word != "mate"; ch++) {
+      		cout << word << endl;
+      		word[0] = ch;
+      	}
+      	cout << "After loop ends, word is " << word << endl;
+      
+      	return 0;
+      }
+      ```
+
+  * 结果：
+
+    * ```c++
+      ?ate
+      aate
+      bate
+      cate
+      date
+      eate
+      fate
+      gate
+      hate
+      iate
+      jate
+      kate
+      late
+      After loop ends, word is mate
+      ```
+
+
+
+### 5.2 while 循环
+
+* while循环是没有初始化和更新部分的for循环，通用格式：
+
+  * ```c++
+    while (test-condition)
+        body
+    ```
+
+  * 示例：
+
+    * ```c++
+      // ch05_13_while.cpp -- introducing the while loop
+      #include <iostream>
+      const int ARSIZE = 20;
+      int main() {
+      	using namespace std;
+      	char name[ARSIZE];
+      
+      	cout << "Your first name, please: ";
+      	cin >> name;
+      	cout << "Here is your name, verticalized and ASCIIized:\n";
+      	int i = 0;
+      	while (name[i] != '\0') {
+      		cout << name[i] << ": " << int(name[i]) << endl;
+      		i++;
+      	}
+      
+      	return 0;
+      }
+      ```
+
+  * 结果：
+
+    * ```c++
+      Your first name, please: Muffy
+      Here is your name, verticalized and ASCIIized:
+      M: 77
+      u: 117
+      f: 102
+      f: 102
+      y: 121
+      ```
+
+    * 
+
+  * 不同于C-风格字符串，string对象不使用空字符来标记字符串末尾，因此要将程序清单5.13转换为使用string类的版本，只需用string对象替换char数组即可。第16章将讨论可用于标识string对象中最后一个字符的技术。
+
+
+
+#### 5.2.1 for与while
+
+* for循环和 while循环几乎是等效的。
+* 它们之间存在三个差别：
+  * 1、在 for循环中省略了测试条件时，将认为条件为true;；
+  * 2、在 for循环中，可使用初始化语句声明一个局部变量，但在 while循环中`不能`这样做；
+  * 3、如果循环体中包括continue语句，情况将稍有不同。
+* 在设计循环时，请记住下面几条指导原则：
+  * 1、指定循环终止的条件；
+  * 2、在首次测试之前初始化条件；
+  * 3、在条件被再次测试之前更新条件。
+
+
+
+#### 5.2.2 等待一段时间：编写延时和循环
+
+* 有时候，让程序等待一段时间很有用。
+
+* 例如，读者可能遇到过这样的程序，它在屏幕上显示一条消息，而还没来得及阅读之前，又出现了其他内容。这样读者将担心自己错过了重要的、无法恢复的消息。
+
+* 头文件ctime(较早的实现中为time.h）提供了这些问题的解决方案：
+
+  * 例程：
+
+    * ```c++
+      // ch05_14_waiting.cpp -- using clock() in a time-delay loop
+      #include <iostream>
+      #include <ctime>
+      
+      int main() {
+      	using namespace std;
+      	cout << "Enter the delay time, in seconds: ";
+      	float secs;
+      	cin >> secs;
+      	clock_t delay = secs * CLOCKS_PER_SEC;
+      	cout << "starting\n";
+      	clock_t start = clock();
+      	while (clock() - start < delay)
+      		;
+      	cout << "done\n";
+      
+      	return 0;
+      }
+      ```
+
+  * 结果：
+
+    * ```c++
+      Enter the delay time, in seconds: 10
+      starting
+      done
+      ```
+
+    * 类型别名：
+
+      * 两种创建方式：
+
+        * 1、使用预处理器：
+
+          * ```c++
+            #define BYTE char;
+            ```
+
+        * 2、使用关键字typedef（更佳）：
+
+          * ```c++
+            typedef char byte;
+            ```
+
+          * ```c++
+            typedef typeName aliasName;
+            ```
+
+            * 即在声明变量最前面加上关键字typedef
+            * typedef不会创建新类型，而只是为已有的类型建立一个新名称。
+
+
+
+### 5.3 do while 循环
+
+* 它不同于另外两种循环，因为它是出口条件（exit condition）循环；
+
+* 这意味着这种循环将**首先**执行`循环体`，然后再判定测试表达式，决定是否应继续执行循环。
+
+* 通用格式：
+
+  * ```c++
+    do
+        body
+    wihel (test-expression)
+    ```
+
+  * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/d862935c-46d5-427f-8d75-239189bb31f2)
+
+
+* 通常，入口条件循环比出口条件循环好，因为入口条件循环在循环开始之前对条件进行检查。
+
+* 但在需要先输入，再测试的程序中出口循环（do while）更合适：
+
+  * 例程：
+
+    * ```C++
+      // ch05_15_dowhile.cpp -- exit-condition loop
+      #include <iostream>
+      int main() {
+      	using namespace std;
+      	int n;
+      
+      	cout << "Enter numbeirs in the range 1-10 to find ";
+      	cout << "My favorite number\n";
+      	do {
+      		cin >> n;
+      	} while (n != 7);
+      	cout << "Yes, 7 is my favorite.\n";
+      	return 0;
+      }
+      ```
+
+  * 结果：
+
+    * ```c++
+      Enter numbeirs in the range 1-10 to find My favorite number
+      1
+      2
+      8
+      9
+      7
+      Yes, 7 is my favorite.
+      ```
+
+
+
+### 5.4 基于范围的 for 循环（C++11）
+
+* C++11新增了一种循环:基于范围(range-based）的 for循环。
+
+* 这简化了一种常见的循环任务:
+
+  * 对数组（或容器类，如 vector 和 array）的每个元素执行相同的操作，如下例所示：
+
+    * ```c++
+      double prices[5] = {4.99, 10.99, 6.87, 7.99, 8.49};
+      for (double x : prices)
+          cout << x << std::endl;
+      ```
+
+  * 后续会详细介绍，了解即可。
+
+
+
+### 5.5 循环和文本输入
+
+#### 5.5.1 使用原始的cin进行输入
+
+* 使用循环来读取来自键盘的文本输入，则必须有办法知道何时停止读取：
+
+  * 选择特殊字符——哨兵字符，将其作为停止标记。
+
+  * 例程：
+
+    * ```c++
+      // ch05_16_textin1.cpp -- reading chars with a while loop
+      #include <iostream>
+      int main() {
+      	using namespace std;
+      	char ch;
+      	int count = 0;
+      	cout << "Enter characters; enter # to quit:\n";
+      	cin >> ch;
+      	while (ch != '#') {
+      		cout << ch;
+      		++count;
+      		cin >> ch;
+      	}
+      	cout << endl << count << " characters read\n";
+      
+      	return 0;
+      }
+      ```
+
+  * 结果：
+
+    * ```c++
+      Enter characters; enter # to quit:
+      see ken run#really fast
+      seekenrun
+      9 characters read
+      ```
+
+    * 该程序在循环之前读取第一个输入字符，这样循环可以测试第一个字符。这很重要，因为第一个字符可能是#。
+
+    * cin读取char值时，与读取其他基本类型一样，cin将忽略空格和换行符。因此输入中的空格没有被回显，也没有被包括在计数内。
+
+    * 更为复杂的是，发送给cin的输入被缓冲。这意味着只有在用户按下回车键后，他输入的内容才会被发送给程序。
+
+
+
+#### 5.5.2 使用cin.get(char)进行补救
+
+* 成员函数cin.get(ch)读取输入中的下一个字符(即使它是空格)，并将其赋给变量ch。
+
+* 例程：
+
+  * ```c++
+    // ch05_17_textin2.cpp -- using cin.get(char)
+    #include <iostream>
+    int main() {
+    	using namespace std;
+    	char ch;
+    	int count = 0;
+    	cout << "Enter characters; enter # to quit:\n";
+    	cin.get(ch);
+    	while (ch != '#') {
+    		cout << ch;
+    		++count;
+    		cin.get(ch);
+    	}
+    	cout << endl << count << " characters read\n";
+    
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    Enter characters; enter # to quit:
+    Did you use a #2 pencil?
+    Did you use a
+    14 characters read
+    ```
+
+
+
+#### 5.5.3 使用哪一个cin.get()
+
+* ```c++
+  cin.get(Name, ArSize);
+  cin.get(char);
+  ```
+
+* 函数重载允许创建多个同名函数，条件是它们的参数列表不同。
+
+
+
+#### 5.5.4 文件尾条件
+
+* cin.eof();详情见P155
+
+* cin.fail();
+
+* 示例：
+
+  * ```c++
+    // ch05_18_textin3.cpp -- reading chars to end of file
+    #include <iostream>
+    int main() {
+    	using namespace std;
+    	char ch;
+    	int count = 0;
+    	
+    	cin.get(ch);
+    	while (cin.fail() == false) {
+    		cout << ch;
+    		++count;
+    		cin.get(ch);
+    	}
+    	cout << endl << count << " characters read\n";
+    
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    The green bird sings in the winter.
+    The green bird sings in the winter.
+    Yes, but the crow files in the dawn.
+    Yes, but the crow files in the dawn.
+    ^Z
+    
+    73 characters read
+    ```
+
+
+
+#### 5.5.5 另一个cin.get()版本
+
+* ```c++
+  ch = cin.get();
+  cout.put(ch);
+  ```
+
+* 和EOF有关详情见P157-158
+
+* 示例：
+
+  * ```c++
+    // ch05_19_textin4.cpp -- reading chars with cin.get()
+    #include <iostream>
+    int main() {
+    	using namespace std;
+    	int ch;
+    	int count = 0;
+    
+    	while ((ch =  cin.get()) != EOF) {
+    		cout.put(char(ch));
+    		++count;
+    	}
+    	cout << endl << count << " characters read\n";
+    
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    The sullen mackerel sulks in the shadowy shallows.
+    The sullen mackerel sulks in the shadowy shallows.
+    Yes, but the blue bird of happiness harbors secrets.
+    Yes, but the blue bird of happiness harbors secrets.
+    ^Z
+    
+    104 characters read
+    ```
+
+  * 使用cin.get(ch)(有一个参数）进行输入时，将不会导致任何类型方面的问题。
+
+* cin.get(char)和 cin.get()之间的差别：
+
+  * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/d9210d0a-d9ed-4dca-919b-abdad49db5e3)
+
+
+
+
+### 5.6 嵌套循环和二维数组
+
+* ``` 5
+  int maxtemps [4] [5];
+  ```
+
+  * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/13f04857-236f-4f7e-ac28-23078ac3651c)
+
+
+  * 循环打印：
+
+    * ```c++
+      for (int row = 0; row < 4; row++) {
+          for (int col = 0; col < 5; ++col)
+              cout << maxtemps[row][col] << "\t";
+          cout << endl;
+      }
+      ```
+
+    * 制表符"\t"；
+
+
+
+#### 5.6.1 初始化二维数组
+
+* 对于二维数组来说，每个元素本身就是一个数组：
+
+  * ```c++
+    int maxtemps[4][5] = {
+        {96, 100, 87, 63, 84},
+        {101, 102, 88, 83, 84},
+        {76, 100, 53, 85, 84},
+        {96, 180, 89, 93, 87}
+    }；
+    ```
+
+
+
+#### 5.6.2 使用二维数组
+
+* 示例（采用了C++常用的做法，将一个指针数组初始化为一组字符串常量）：
+
+  * 示例：
+
+    * ```c++
+      // nested.cpp -- nested loops and 2-D array
+      #include <iostream>
+      const int Cities = 5;
+      const int Years = 4;
+      
+      int main() {
+      	using namespace std;
+      	const char* cities[Cities] = {
+      		"Gribble City",
+      		"Gribbletwon",
+      		"New Gribble",
+      		"San Gribble",
+      		"Gribble Vista"
+      	};
+      
+      	int maxtemps[Years][Cities] = {
+      		{96, 100, 87, 63, 84},
+      		{101, 102, 88, 83, 84},
+      		{76, 100, 53, 85, 84},
+      		{96, 180, 89, 93, 87}
+      	};
+      
+      	cout << "Maximum temperatures for 2008 - 2011\n\n";
+      	for (int city = 0; city < Cities; ++city) {
+      		cout << cities[city] << ":\t";
+      		for (int year = 0; year < Years; ++year)
+      			cout << maxtemps[year][city] << "\t";
+      		cout << endl;
+      	}
+      
+      	return 0;
+      }
+      ```
+
+  * 结果：
+
+    * ```c++
+      Gribble City:   96      101     76      96
+      Gribbletwon:    100     102     100     180
+      New Gribble:    87      88      53      89
+      San Gribble:    63      83      85      93
+      Gribble Vista:  84      84      84      87
+      ```
+
+    * 例程使用字符串指针数组；
+
+    * 还可以使用char数组的数组(用法在P162)；
+
+      * 指针数组存储5个字符串的地址，而使用char 数组的数组时，将5个字符串分别复制到5个包含25个元素的char数组中。因此，从**存储空间**的角度说，使用指针数组更为**经济**；然而，如果要**修改**其中的任何一个字符串，则二维数组是**更好**的选择。
+
+    * 还可以使用string对象数组；
+
+      * 在希望字符串是可修改的情况下，string类自动调整大小的特性将使这种方法比使用二维数组更为方便。
+
+
